<resources>
    <string name="app_name">Kotlin_Test</string>

    <string name="show_kotlin_web">显示官方的链接</string>
    <string name="kotlin_web">Kotlin官网链接：</string>
    <string name="show_kotlin_details_web">详细阅读：</string>
    <string name="kotlin_web_url">&lt;a href=\'%1$s\'&gt;%2$s&lt;/a&gt;</string>
    <string name="error_code">代码异常</string>


    <string name="BaseSyntaxActivity">基本语法——界面</string>
    <string name="text_base_syntax">基本语法</string>
    <string name="text_define_fun">定义函数</string>
    <string name="text_define_var">定义变量</string>
    <string name="text_comments">注解</string>
    <string name="text_use_conditional_expressions">使用条件表达式</string>
    <string name="text_use_string_templates">使用字符串模板</string>
    <string name="text_type_checks">使用类型检测及自动类型转换</string>
    <string name="text_nullable_value">关于?符号,使用可空值</string>
    <string name="text_for_while_loop">for 和 while 循环</string>
    <string name="text_when_expression">when 表达式</string>
    <string name="text_use_range">使用区间（range）</string>
    <string name="text_collections">使用集合</string>
    <string name="text_creating_instances">创建基本类及其实例</string>


    <string name="DefineFunActivity">定义函数——界面</string>
    <string name="hint_input_frist_num">请输入第一个数字</string>
    <string name="hint_input_second_num">请输入第二个数字</string>
    <string name="text_get_result">获取结果</string>
    <string name="tip_for_NumberFormatException">数值过长，请重新输入</string>
    <string name="please_input_num">请输入数值</string>


    <string name="DefineVarActivity">定义变量——界面</string>
    <string name="text_run">运行</string>
    <string name="text_run_result">运行结果：</string>
    <string name="text_sum_up">总结：</string>


    <string name="CommentsActivity">注解——界面</string>


    <string name="StringTemplatesActivity">使用字符串模板——界面</string>


    <string name="ConditionalExpressionsActivity">条件表达式——界面</string>


    <string name="NullableValueActivity">使用可空值及 null 检测——界面</string>


    <string name="TypeChecksActivity">使用类型检测及自动类型转换——界面</string>


    <string name="ForAndWhileLoopActivity">关于for 和 while 循环——界面</string>


    <string name="WhenExpressionActivity">使用 when 表达式——界面</string>

    <string name="UseRangesActivity">使用区间（range）——界面</string>

    <string name="CollectionsActivity">使用集合——界面</string>

    <string name="CreatingInstancesActivity">创建基本类及其实例——界面</string>



    <string name="IdiomsActivity">习惯用法——界面</string>
    <string name="idioms">习惯用法</string>


    <string name="CreatingDtosActivity">创建Dtos类——界面</string>

    <string name="DefaultValueForFunActivity">函数的默认参数——界面</string>
    <string name="create_datos">创建 DTOs（POJOs/POCOs）</string>
    <string name="default_value">函数的默认参数</string>


    <string name="ListFilterActivity">过滤List——界面</string>
    <string name="input_string">请输入字符</string>
    <string name="add">添加</string>
    <string name="list_filter">过滤List</string>
    <string name="added">添加了：</string>
    <string name="list_empty">List 为空</string>


    <string name="StringInterpolationActivity">String 内插——界面</string>
    <string name="string_interpolation">String内插</string>


    <string name="InstanceChecksActivity">类型判断——界面</string>
    <string name="instance_checks">类型判断</string>


    <string name="MapOrPairActivity">遍历 map/pair型list——界面</string>
    <string name="traversing_map_or_pairs">遍历 \'map\' 或 \'pair型list\'</string>
    <string name="lazy_property">lazy属性</string>
    <string name="LazyPropertyActivity">Lazt属性——界面</string>
    <string name="only_read_map">只读Map，以及访问Map</string>
    <string name="OnlyReadMapActivity">只读Map,以及访问Map——界面</string>


</resources>
