<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context="com.su.kotlin_test.activity.baseSyntax.BaseSyntaxActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDefineFun"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_define_fun"/>

        <Button
            android:id="@+id/btnDefineVar"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_define_var"/>

        <Button
            android:id="@+id/btnComments"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_comments"/>

        <Button
            android:id="@+id/btnStringTemplates"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_use_string_templates"/>

        <Button
            android:id="@+id/btnConditionalExpressions"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_use_conditional_expressions"/>

        <Button
            android:id="@+id/btnNullableValue"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_nullable_value"/>

        <Button
            android:id="@+id/btnTypeChecks"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_type_checks"/>

        <Button
            android:id="@+id/btnForAndWhileLoop"
            style="@style/btn_lwm_lhw"
            android:textAllCaps="false"
            android:text="@string/text_for_while_loop"/>

        <Button
            android:id="@+id/btnWhenExpression"
            style="@style/btn_lwm_lhw"
            android:textAllCaps="false"
            android:text="@string/text_when_expression"/>


        <Button
            android:id="@+id/btnUseRanges"
            style="@style/btn_lwm_lhw"
            android:textAllCaps="false"
            android:text="@string/text_use_range"/>


        <Button
            android:id="@+id/btnCollections"
            style="@style/btn_lwm_lhw"
            android:textAllCaps="false"
            android:text="@string/text_collections"/>


        <Button
            android:id="@+id/btnCreatingInstances"
            style="@style/btn_lwm_lhw"
            android:textAllCaps="false"
            android:text="@string/text_creating_instances"/>

    </LinearLayout>
</ScrollView>
