<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.su.kotlin_test.activity.baseSyntax.BaseSyntaxActivity">

    <Button
        android:id="@+id/btnDefineFun"
        style="@style/btn_lww_lhw"
        android:text="@string/text_define_fun"/>

    <Button
        android:id="@+id/btnDefineVar"
        style="@style/btn_lww_lhw"
        android:text="@string/text_define_var"/>

    <Button
        android:id="@+id/btnComments"
        style="@style/btn_lww_lhw"
        android:text="@string/text_comments"/>

    <Button
        android:id="@+id/btnStringTemplates"
        style="@style/btn_lww_lhw"
        android:text="@string/text_use_string_templates"/>

    <Button
        android:id="@+id/btnConditionalExpressions"
        style="@style/btn_lww_lhw"
        android:text="@string/text_use_conditional_expressions"/>

</LinearLayout>
