<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBg"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            tools:context=".activity.idioms.ListFilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvKotlinWeb"
            style="@style/style_tv.style_tv_kotlin_web"/>


        <TextView
            android:id="@+id/tvKotlinDetailsWeb"
            style="@style/style_tv_kotlin_details_web"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etValueStr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/input_string"
            android:inputType="text"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btnAdd"
            style="@style/btn_lwm_lhw"
            android:text="@string/add"/>

        <TextView
            android:id="@+id/tvFun"
            style="@style/style_tv"/>

        <Button
            android:id="@+id/btnRun"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_run"/>

        <TextView
            android:id="@+id/tv1"
            style="@style/style_tv"
            android:text="@string/text_run_result"/>

        <TextView
            android:id="@+id/tvRunResult"
            style="@style/style_tv"/>

        <TextView
            android:id="@+id/tvSumUp"
            style="@style/style_tv"
            android:text="@string/text_sum_up"/>
    </LinearLayout>
</ScrollView>
