<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBg"
    tools:context=".activity.idioms.IdiomsActivity">

    <TextView
        android:id="@+id/tvKotlinWeb"
        style="@style/style_tv.style_tv_kotlin_web"/>

    <Button
        android:id="@+id/btnCreatingDTOs"
        style="@style/btn_lwm_lhw"
        android:text="@string/create_datos"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnDefaultValuesForFun"
        style="@style/btn_lwm_lhw"
        android:text="@string/default_value"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnListFilter"
        style="@style/btn_lwm_lhw"
        android:text="@string/list_filter"
        android:textAllCaps="false"/>
</LinearLayout>