<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBg"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvKotlinWeb"
            style="@style/style_tv.style_tv_kotlin_web"/>


        <TextView
            android:id="@+id/tvKotlinDetailsWeb"
            style="@style/style_tv_kotlin_details_web"/>



        <RadioGroup
            android:id="@+id/radioGroupForFun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tvRadioGroupDescribe"
            android:visibility="gone"
            style="@style/style_tv"/>

        <RadioGroup
            android:id="@+id/radioGroupForValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnRun"
            style="@style/btn_lwm_lhw"
            android:text="@string/text_run"/>

        <TextView
            android:id="@+id/tv1"
            style="@style/style_tv"
            android:text="@string/text_run_result"/>

        <TextView
            android:id="@+id/tvRunResult"
            style="@style/style_tv"/>

        <TextView
            android:id="@+id/tvSumUp"
            style="@style/style_tv"
            android:text="@string/text_sum_up"/>
    </LinearLayout>
</ScrollView>